[gd_scene load_steps=5 format=3 uid="uid://cfc0erykqg0dd"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_uqlji"]
[ext_resource type="Shader" path="res://shaders/pause_menu.gdshader" id="2_dwvs3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_woa76"]
shader = ExtResource("2_dwvs3")
shader_parameter/amount = 3.0

[sub_resource type="SystemFont" id="SystemFont_l2rdf"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqlji")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_woa76")
offset_left = -1029.0
offset_top = -817.0
offset_right = 2285.0
offset_bottom = 1305.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -136.0
offset_right = 76.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="ResumeButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_l2rdf")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="RestartButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_l2rdf")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_l2rdf")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="ExitButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_l2rdf")
theme_override_font_sizes/font_size = 32
text = "Exit Game"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_quit_pressed"]
